@@ -1,24 +1,12 @@
-using Zeus.ContentProperties;
 using Zeus.Integrity;
 using Zeus.Templates.ContentTypes;
 
 namespace Zeus.AddIns.ECommerce.ContentTypes.Data
 {
-	[ContentType("Order Item")]
 	[RestrictParents(typeof(Order))]
-	public class OrderItem : BaseContentItem
+	public abstract class OrderItem : BaseContentItem
 	{
-		public ContentItem Product
-		{
-			get { return GetDetail<ContentItem>("Product", null); }
-			set { SetDetail("Product", value); }
-		}
-
-		public string ProductTitle
-		{
-			get { return GetDetail("ProductTitle", string.Empty); }
-			set { SetDetail("ProductTitle", value); }
-		}
+		public abstract string DisplayTitle { get; }
 
 		public int Quantity
 		{
@@ -35,11 +23,6 @@ namespace Zeus.AddIns.ECommerce.ContentTypes.Data
 		public decimal LineTotal
 		{
 			get { return Price * Quantity; }
-		}
-
-		public PropertyCollection Variations
-		{
-			get { return GetDetailCollection("Variations", true); }
 		}
 	}
 }
