@@ -1,4 +1,5 @@
 using System.Collections.Generic;
+using Zeus.AddIns.ECommerce.ContentTypes;
 using Zeus.AddIns.ECommerce.ContentTypes.Data;
 using Zeus.AddIns.ECommerce.ContentTypes.Pages;
 using Zeus.AddIns.ECommerce.PaymentGateways;
@@ -7,7 +8,16 @@ namespace Zeus.AddIns.ECommerce.Services
 {
 	public interface IOrderService
 	{
+		string GetMaskedCardNumber(string cardNumber);
 		IEnumerable<PaymentCardType> GetSupportedCardTypes();
-		Order PlaceOrder(Shop shop, string cardNumber, string cardVerificationCode);
+
+		Order PlaceOrder(IECommerceConfiguration configuration, string cardNumber, string cardVerificationCode,
+			DeliveryMethod deliveryMethod, decimal deliveryPrice, Address billingAddress,
+			Address shippingAddress, PaymentCard paymentCard, string emailAddress,
+			string telephoneNumber, string mobileTelephoneNumber,
+			IEnumerable<OrderItem> items);
+
+		Order PlaceOrder(Shop shop, string cardNumber, string cardVerificationCode,
+			ShoppingBasket shoppingBasket);
 	}
 }
