@@ -10,10 +10,9 @@ namespace Zeus.AddIns.ECommerce.Services
 
 		void AddItem(Shop shop, Product product, IEnumerable<Variation> variations);
 		void ClearBasket(Shop shop);
-		IShoppingBasket GetBasket(Shop shop);
+		ShoppingBasket GetBasket(Shop shop);
 		void RemoveItem(Shop shop, Product product, VariationPermutation variationPermutation);
 		void UpdateQuantity(Shop shop, Product product, VariationPermutation variationPermutation, int newQuantity);
-		string GetMaskedCardNumber(string cardNumber);
 		void SaveBasket(Shop shop);
 	}
 }
